@@ -1,5 +1,8 @@
 2002-12-19  Werner Koch  <wk@gnupg.org>
 
+	* libgcrypt.vers: New.
+	* Makefile.am: Use this instead of the build symbol file.
+
 	* global.c (gcry_control) <initialization>: Call the random module
 	initializer to make sure that the pool lock flag has been
 	initialized.
